# OpenSSMT

./: .gitignore  ADSREnvelope.cpp  ADSREnvelope.h  ADSREnvelopePainter.cpp  ADSREnvelopePainter.h  CMakeLists.txt  FMNote.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  OpenSSMT.cpp  README.md
